--- a/project/final/issue1/index.html
+++ b/project/final/issue1/index.html
@@ -12,15 +12,15 @@
 <body>
 
   <header id="top">
-      <a href="../index.html"><img class="header" width="239" height="40" src="images/alien_text_logo.png"></a>
+      <a href="../index.html"><img class="header" width="239" height="40" src="images/alien_text_logo.png" alt="logo"></a>
 
 
 
-    <div id="navline">
+    <div id="navline"></div>
     </header>
 
 
-<iframe width="1350" height=900" src="katebush/index.html"></iframe>
+<iframe width="1350" height="900" src="katebush/index.html"></iframe>
 
 
       <footer>
