--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <li><a href="project/process/audienceTest.html">Audience test</a></li>
                     <li><a href="project/process/audienceTestResults.html">Audience test results</a></li>
                     <li><a href="project/final/index.html">Final</a></li>
+                    <li><a href="project/process/presentation.pdf">Presentation</a></li>
                 </ul>
             </nav>
         </div>
