--- a/studio_quiz/index.html
+++ b/studio_quiz/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="quiz">
-    <img class="title" alt="Respecting women & femmes 101" src="title.png">
+    <a href="index.html"><img class="title" alt="Respecting women & femmes 101" src="title.png"></a>
 
 
     <h2 class="quiz-question">1. How much space should you take up in public transit and shared spaces?</h2>
