--- a/studio_quiz/index.html
+++ b/studio_quiz/index.html
@@ -74,6 +74,8 @@
   <img class="footer" alt="footer" src="footer.png">
 <div class="quiz-result">
 </div>
+<p><a href="index.html">Try Again</a></p>
+
 </div>
 
 
