--- a/project/final/index.html
+++ b/project/final/index.html
@@ -46,7 +46,7 @@
                 </ul>
             </nav>
             <div id="alien">
-                <img width="170" height="302" src="images/alien.png" alt="alien">
+                <img width="170" height="302" src="images/alien_diagnosis.gif" alt="alien">
                 <img src="images/alien_head_01.png" width="50" height="60" id="alienhead" alt="alienhead">
                 <img src="images/alien_body_01.png" width="170" height="247" id="alienbody" alt="alienbody">
 
