--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <ul>
                     <li><a href="bookex/looping.html">Ch 2-Looping</a></li>
                     <li><a href="bookex/minimum.html">Ch 3-Minimum</a></li>
-                    <li><a href="bookex/sum.html">Ch 4-The Sum of a Range</a></li>
-                    <li><a href="bookex/mouse.html">Ch 14-Mouse Trail</a></li>
+                    <li><a href="#">Ch 13-The Cat's Hat</a></li>
+                    <li><a href="#">Ch 14-Mouse Trail</a></li>
 
                 </ul>
             </nav>
@@ -46,10 +46,10 @@
             <nav>
                 <ol>
                     <li><a href="blog/index.html">Blog</a></li>
-                    <li><a href="studio2/index.html">Mansplain Generator</a></li>
-                    <li><a href="studio3/index.html">All About Ziggy</a></li>
-                    <li><a href="studio4/index.html">Virtual Psychic</a></li>
-                    <li><a href="studio5/index.html">Office Boy Loop</a></li>
+                    <li><a href="studio2/index.html">Mad Libs 2.0</a></li>
+                    <li><a href="#">Pocket full of interface</a></li>
+                    <li><a href="#">Time is on my side</a></li>
+                    <li><a href="#">The library</a></li>
                 </ol>
             </nav>
         </div>
@@ -62,27 +62,6 @@
                 <ul>
                     <li><a href="project/process/topic.html">Topic brainstorm</a></li>
                     <li><a href="project/process/comparative.html">Comparative research</a></li>
-                    <li><a href="project/process/topicchoice.html">Topic choice</a></li>
-                    <li><a href="project/process/research.html">Research</a></li>
-                    <li><a href="project/process/ISEA_2017_Application.pdf">Project </a></li>
-                    <li><a href="project/process/needfinding.pdf">Needfinding</a></li>
-                    <li><a href="project/process/moodboards.pdf">Visual research</a></li>
-                    <li><a href="project/process/audience.pdf">Audience</a></li>
-                    <li><a href="project/process/userGoals.pdf">User goals</a></li>
-                    <li><a href="project/process/storyboards.pdf">Storyboards</a></li>
-                    <li><a href="project/process/paperPrototype.html">Paper prototype</a></li>
-                    <li><a href="project/process/images/siteflow.png">Site flow</a></li>
-                    <li><a href="project/process/images/userflow.png">User flow</a></li>
-                    <li><a href="project/process/images/wireframe.png">Wireframe</a></li>
-                    <li><a href="project/process/proto1/index.html">Prototype 1</a></li>
-                    <li><a href="project/process/comps.pdf">Comps</a></li>
-                    <li><a href="project/process/styleTile.pdf">Style tile</a></li>
-                    <li><a href="project/process/proto2/index.html">Prototype 2</a></li>
-                    <li><a href="project/process/proto3/index.html">Prototype 3</a></li>
-                    <li><a href="project/process/audienceTest.html">Audience test</a></li>
-                    <li><a href="project/process/audienceTestResults.html">Audience test results</a></li>
-                    <li><a href="project/final/index.html">Final</a></li>
-                    <li><a href="project/process/presentation.pdf">Presentation</a></li>
                 </ul>
             </nav>
         </div>
